<resources>
    <string name="app_name">X-WALLET</string>
    <string name="packageName">com.example.myapplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_zichan">资产</string>
    <string name="tab_hangqin">行情</string>
    <string name="tab_faxian">发现</string>
    <string name="tab_zixun">咨询</string>
    <string name="tab_wode">我的</string>
    <string name="text_chongbi">充币</string>
    <string name="text_tibi">提币</string>
    <string name="text_bidui">币兑</string>
    <string name="text_heyue">合约</string>

    <string name="text_fukuan">付款</string>
    <string name="text_saoma">扫码</string>
    <string name="text_qianbao">钱包</string>
    <string name="text_zclb">资产列表</string>
    <string name="text_ydqb">云端钱包</string>
    <string name="text_hdqb">HD钱包</string>
    <string name="text_cjhdr">创建或导入</string>
    <string name="text_yjlqb">X-KEY硬件冷钱包</string>
    <string name="text_peidui">配对</string>
    <string name="text_ljgx">立即更新</string>
    <string name="text_fxxbb">发现新版本</string>
    <string name="toast_chuchuo">出错</string>
    <string name="toast_xzwc">下载完成</string>
    <string name="text_denglu">登录</string>
    <string name="tishi_qtxsjhm">请填写手机号码</string>
    <string name="tishi_qtxmm">请填写密码</string>
    <string name="text_qhdyx">切换到邮箱</string>
    <string name="text_wjmm">忘记密码?</string>
    <string name="text_hmyzh">还没有账号？</string>
    <string name="text_zhuce">注册</string>
    <string name="text_yyqh">语言切换</string>
    <string name="text_sryzm">输入验证码</string>
    <string name="text_yzmyfsz">验证码已发送至</string>
    <string name="text_msdyzm">没收到验证码?</string>
    <string name="text_cxfs">重新发送</string>
    <string name="text_miao">秒</string>
    <string name="text_yxdl">邮箱登录</string>
    <string name="text_qtxyx">请填写邮箱</string>
    <string name="text_qhdsj">切换到手机</string>
    <string name="text_yxzc">邮箱注册</string>
    <string name="text_qhdsjzc">切换到手机注册</string>
    <string name="text_fsyzm">发送验证码</string>
    <string name="text_yyzh">已有账号？</string>
    <string name="title_wjmm">忘记密码</string>
    <string name="tishi_qtxyzm">请填写验证码</string>
    <string name="text_hqyzm">获取验证码</string>
    <string name="tishi_qtxxmm">请填写新密码</string>
    <string name="tishi_qzctxxmm">请再次填写新密码</string>
    <string name="text_zhmm">找回密码</string>
    <string name="text_sjzc">手机注册</string>
    <string name="text_qhdyxzc">切换到邮箱注册</string>
    <string name="text_quxiao">取消</string>
    <string name="text_szdlmm">设置登录密码</string>
    <string name="tishi_qszmm">请设置密码</string>
    <string name="tishi_zcsrmm">再次输入密码</string>
    <string name="title_mmtishi">8-20个字符（字母，数字和符号的组合），字母必须同时包含大写和小写字母</string>
    <string name="tishi_qsryqmbt">请输入邀请码(必填)</string>
    <string name="text_wqrwfggyqm">我确认无法更改邀请码</string>
    <string name="text_xyb">下一步</string>
    <string name="text_szzfmm">设置支付密码</string>
    <string name="text_fbqxyszzfmm">发币前需要设置支付密码</string>
    <string name="text_zzczh">总资产折合</string>
    <string name="text_shandui">闪兑</string>
    <string name="text_shangcheng">商城</string>


    <string name="text_zhuanzhang">转账</string>
    <string name="text_mingxi">明细</string>
    <string name="title_keyong">可用：</string>
    <string name="text_xzbz">选择币种</string>
    <string name="text_xdb">X代币</string>
    <string name="text_tbdz">提币地址</string>
    <string name="text_tbhztdz">提币或粘贴地址</string>
    <string name="text_shuliang">数量</string>
    <string name="text_keyong">可用</string>
    <string name="text_sxf">手续费</string>
    <string name="text_dzsl">到账数量</string>
    <string name="text_zjmm">资金密码</string>
    <string name="text_qsrzjmm">请输入资金密码</string>
    <string name="text_bcewmzxc">保存二维码至相册</string>
    <string name="text_fzdz">复制地址</string>
    <string name="text_czxz">充值须知</string>
    <string name="title_chongbi1">1.禁止向X代币地址充值除X代币之外的资产，任何充入X代币的非X代币资产将不可找回。</string>
    <string name="title_chongbi2">2.使用X代币地址充值需要2个网络确认才能到账，使用站内间转账无需网络确认，可以实时到账。</string>
    <string name="text_youxi">游戏</string>
    <string name="text_kuangji">矿机</string>
    <string name="text_wssc">网上商城</string>
    <string name="text_qklyx">区块链游戏</string>
    <string name="text_qklllq">区块链浏览器</string>
    <string name="text_bdjys">币兑交易所</string>
    <string name="text_hqzx">行情资讯</string>
    <string name="text_minpian">名片</string>
    <string name="text_shequ">社区</string>
    <string name="text_rmyy">热门应用</string>
    <string name="text_styy">生态应用</string>
    <string name="text_zxxq">资讯详情</string>
    <string name="text_zdcjj">最大成交差价(￥)：</string>
    <string name="text_li">利</string>
    <string name="text_sspt">所属平台</string>
    <string name="text_zgjg">最高价格</string>
    <string name="text_zdjg">最低价格</string>
    <string name="text_pt">平台</string>
    <string name="text_zxj">最新价</string>
    <string name="text_zdf">涨跌幅</string>
    <string name="text_shoukuan">收款</string>
    <string name="text_jiaoyisuo">交易所</string>
    <string name="text_toupiao">投票</string>
    <string name="text_shengtai">生态</string>
    <string name="text_tzlb">投资列表</string>
    <string name="text_syz">收益中</string>
    <string name="text_ywc">已完成</string>
    <string name="text_yqx">已取消</string>
    <string name="text_ljtz">立即投资</string>
    <string name="text_paizhao">拍照</string>
    <string name="text_cxcxz">从相册选择</string>
    <string name="text_tdrs">团队人数</string>
    <string name="text_ztrs">直推人数</string>
    <string name="text_quanbu">全部</string>
    <string name="text_cxhq">重新获取</string>
    <string name="text_qtxzqdsjhm">请填写正确的手机号码</string>
    <string name="tishi_qtxxzfmm">请填写新支付密码</string>
    <string name="text_qzctxxzfmm">请再次填写新支付密码</string>
    <string name="tishi_lcsrdmmyyz">两次输入的密码要一致</string>
    <string name="tishi_lcsrdzfmmyyz">两次输入的支付密码要一致</string>
    <string name="tishi_qgxxy">请勾选协议</string>
    <string name="tishi_qtxzqdyx">请填写正确的邮箱</string>
    <string name="text_zwkf">暂未开放</string>

    <string name="text_jrjdtsy">今日静动态收益</string>
    <string name="text_ztz">总投资</string>
    <string name="text_jrsy">今日收益</string>
    <string name="text_zsy">总收益</string>
    <string name="text_zsl">总数量</string>
    <string name="text_kssj">开始时间</string>
    <string name="text_jssj">结束时间</string>
    <string name="text_grznhye">个人智能合约额</string>
    <string name="text_tdzrs">团队总人数</string>
    <string name="text_tdzz">团队总值</string>
    <string name="text_ren">人</string>
    <string name="text_grsy">个人收益</string>
    <string name="text_jrzxsy">今日最新收益</string>
    <string name="text_tdsy">团队收益</string>
    <string name="text_tdzsy">团队总收益</string>
    <string name="text_tdjrzsy">团队今日总收益</string>
    <string name="text_znhy">智能合约</string>
    <string name="text_dssy">代数收益</string>
    <string name="text_jqfh">加权分红</string>
    <string name="text_styjsy">生态佣金收益</string>
    <string name="text_styjpjsy">生态佣金平级收益</string>
    <string name="text_rhsy">日化收益</string>
    <string name="text_qsrsl">请输入数量</string>
    <string name="text_goumai">购买</string>
    <string name="text_jymm">交易密码</string>
    <string name="text_qsrjymm">请输入交易密码</string>
    <string name="textb_kyye">可用余额:</string>
    <string name="text_qxzbz">请选择币种</string>
    <string name="text_tian">天</string>
    <string name="textb_hyzq">合约周期：</string>
    <string name="text_hyzt">合约状态：</string>
    <string name="text_wzdl">我知道了</string>
    <string name="text_sfqxhy">是否取消合约？</string>
    <string name="text_queren">确认</string>
    <string name="text_shouyi">收益</string>
    <string name="text_reqi">日期</string>
    <string name="text_zwsj">暂无数据</string>
</resources>
