<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".begin.activity.EmailLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:src="@drawable/image_left_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_25"
            android:text="@string/text_yxdl"
            android:textColor="@color/black_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_50">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:layout_marginRight="@dimen/dp_30"
                android:inputType="text"
                android:textColor="@color/black_text"
                android:hint="@string/text_qtxyx"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:background="@mipmap/image_guanbi"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_10">

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:inputType="textPassword"
                android:textColor="@color/black_text"
                android:hint="@string/tishi_qtxmm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_qhdsj"
                android:textColor="@color/zise"/>

            <TextView
                android:id="@+id/text_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_wjmm"
                android:layout_alignParentRight="true"
                android:textColor="@color/zise"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_100"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/white_text"
            android:text="@string/text_denglu"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/zise_bg"/>

        <LinearLayout
            android:id="@+id/lin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_hmyzh"
                android:textColor="@color/textcolor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_zhuce"
                android:textColor="@color/zise"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>