<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_15">

        <TextView
            android:id="@+id/text_paiZhao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/baise_bg"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/textcolor2"
            android:text="@string/text_paizhao"
            android:layout_marginBottom="@dimen/dp_15"
            android:gravity="center"/>

        <TextView
            android:id="@+id/text_xiangCe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/zise_bg"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/white_text"
            android:text="@string/text_cxcxz"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"/>

        <TextView
            android:id="@+id/text_quXiao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/baise_bg"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/textcolor2"
            android:text="@string/text_quxiao"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>
