<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".begin.activity.SetLoginPassActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:src="@drawable/image_left_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_25"
            android:text="@string/text_szdlmm"
            android:textColor="@color/black_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_50">

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:inputType="textPassword"
                android:textColor="@color/black_text"
                android:hint="@string/tishi_qszmm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/title_mmtishi"
            android:textColor="@color/red_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_10">

            <EditText
                android:id="@+id/ed_pass2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:inputType="textPassword"
                android:textColor="@color/black_text"
                android:hint="@string/tishi_zcsrmm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_10">

            <EditText
                android:id="@+id/ed_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:inputType="number"
                android:textColor="@color/black_text"
                android:hint="@string/tishi_qsryqmbt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_xuanze"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center"
                android:background="@mipmap/image_yuan_unselect"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/text_wqrwfggyqm"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_30"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/white_text"
            android:text="@string/text_xyb"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/zise_bg"/>
    </LinearLayout>
</RelativeLayout>