<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".begin.activity.CodeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:src="@drawable/image_left_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_25"
            android:text="@string/text_sryzm"
            android:textColor="@color/black_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:text="@string/text_yzmyfsz"
                android:textColor="@color/black_text"/>

            <TextView
                android:id="@+id/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:text=""
                android:layout_marginLeft="@dimen/dp_10"
                android:textColor="@color/black_text"/>
        </LinearLayout>

        <com.example.myapplication.begin.edit.VerifyCodeView
            android:id="@+id/verify_code_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_50"/>

        <LinearLayout
            android:id="@+id/lin_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_msdyzm"
                android:textColor="@color/textcolor"/>

            <TextView
                android:id="@+id/text_timeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/text_cxhq"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColor="@color/textcolor"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/lanse_bg"
            android:layout_marginTop="@dimen/dp_100"
            android:textSize="@dimen/sp_15"
            android:text="@string/text_xyb"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white_text"/>
    </LinearLayout>
</RelativeLayout>