<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_bg"
    tools:context=".wode.activity.MingXiActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/back"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_mingxi"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_17" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black_text"
            android:text="@string/text_reqi"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black_text"
            android:text="@string/text_shouyi"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:background="@color/ed_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/relist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/lin_zanwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_80"
                android:background="@drawable/zanwu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/text_zwsj"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>